--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,29 +1,35 @@
 body {
-    background: linear-gradient(45deg, #ff6b6b, #ffa06b, #ffd166, #a0fe65);
-    background-size: 400% 400%;
-    animation: gradientAnimation 10s ease infinite;
+  background: linear-gradient(45deg, #ff6b6b, #ffa06b, #ffd166, #a0fe65);
+  background-size: 400% 400%;
+  animation: gradientAnimation 10s ease infinite;
+  color: #ffffff;
+}
+
+/* 设置滚动条样式 */
+/* 滚动条轨道 */
+::-webkit-scrollbar-track {
+  background-color: rgba(255, 255, 255, 0.2);
+  /* 调整背景颜色透明度 */
+}
+
+/* 滚动条滑块 */
+::-webkit-scrollbar-thumb {
+  background-color: #ffffff;
+  /* 滑块颜色 */
+  border-radius: 6px;
+  /* 滑块边框圆角 */
+}
+
+@keyframes gradientAnimation {
+  0% {
+    background-position: 0% 50%;
   }
-  
-  /* 设置滚动条样式 */
-  /* 滚动条轨道 */
-  ::-webkit-scrollbar-track {
-    background-color: rgba(255, 255, 255, 0.2); /* 调整背景颜色透明度 */
+
+  50% {
+    background-position: 100% 50%;
   }
-  
-  /* 滚动条滑块 */
-  ::-webkit-scrollbar-thumb {
-    background-color: #ffffff; /* 滑块颜色 */
-    border-radius: 6px; /* 滑块边框圆角 */
+
+  100% {
+    background-position: 0% 50%;
   }
-  
-  @keyframes gradientAnimation {
-    0% {
-      background-position: 0% 50%;
-    }
-    50% {
-      background-position: 100% 50%;
-    }
-    100% {
-      background-position: 0% 50%;
-    }
-  }
+}
