--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -8,13 +8,17 @@ body {
 /* 设置滚动条样式 */
 /* 滚动条轨道 */
 ::-webkit-scrollbar-track {
-  background-color: rgba(255, 255, 255, 0.2);
+  background: linear-gradient(45deg, #ff6b6b, #ffa06b, #ffd166, #a0fe65);
+  background-size: 400% 400%;
+  animation: gradientAnimation 10s ease infinite;
   /* 调整背景颜色透明度 */
 }
 
 /* 滚动条滑块 */
 ::-webkit-scrollbar-thumb {
-  background-color: #ffffff;
+  background: linear-gradient(45deg, #ff6b6b, #ffa06b, #ffd166, #a0fe65);
+  background-size: 400% 400%;
+  animation: gradientAnimation 10s ease infinite;
   /* 滑块颜色 */
   border-radius: 6px;
   /* 滑块边框圆角 */
